--- a/experience.html
+++ b/experience.html
@@ -7,63 +7,77 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display">
     <link rel="stylesheet" href="style.css">
   </head>
-
   <body>
     <nav>
       <a href="index.html">About Me</a>
       <a href="experience.html" class="active">Experience</a>
+      <a href="projects.html">Projects</a>
       <a href="resume.html">Resume</a>
       <a href="contact.html">Contact</a>
     </nav>
-    <section id="frame">
-      <a class="note sticky1">
-        <div class='text'>Colorado Space Grant Consortium</div>
-      </a>
-      <a class="note sticky2">
-        <div class='text'>Hitachi Energy</div>
-      </a>
-      <a class="note sticky1">
-        <div class='text'>Blueprint Boulder</div>
-      </a>
-      <a class="note sticky2">
-        <div class='text'>CU International Festival</div>
-      </a>
-      <a class="note sticky1">
-        <div class='text'>Colorado Space Grant Consortium</div>
-      </a>
-      <a class="note sticky2">
-        <div class='text'>Hitachi Energy</div>
-      </a>
-      <a class="note sticky1">
-        <div class='text'>Blueprint Boulder</div>
-      </a>
-      <a class="note sticky2">
-        <div class='text'>CU International Festival</div>
-      </a>
-      <a class="note sticky1">
-        <div class='text'>Colorado Space Grant Consortium</div>
-      </a>
-      <a class="note sticky2">
-        <div class='text'>Hitachi Energy</div>
-      </a>
-      <a class="note sticky1">
-        <div class='text'>Blueprint Boulder</div>
-      </a>
-      <a class="note sticky2">
-        <div class='text'>CU International Festival</div>
-      </a>
-      <a class="note sticky1">
-        <div class='text'>Colorado Space Grant Consortium</div>
-      </a>
-      <a class="note sticky2">
-        <div class='text'>Hitachi Energy</div>
-      </a>
-      <a class="note sticky1">
-        <div class='text'>Blueprint Boulder</div>
-      </a>
-      <a class="note sticky2">
-        <div class='text'>CU International Festival</div>
-      </a>
+    <section id="header">
+      <h1>Experience</h>
+    </section>
+    <section>
+      <div class="frame">
+        <div class="row">
+          <div class="col">
+            <a class="note sticky1 one">
+              <div class='text'><h4>Colorado Space Grant Consortium</h4></div>
+            </a>
+            <a class="note sticky4 two">
+              <div class='text'><h4>Hitachi Energy</h4></div>
+            </a>
+            <a class="note sticky3 one">
+              <div class='text'><h4>Blueprint Boulder</h4></div>
+            </a>
+            <a class="note sticky4 one">
+              <div class='text'><h4>CU International Festival</h4></div>
+            </a>
+          </div>
+          <div class="col">
+            <a class="note sticky3 three">
+              <div class='text'><h6>Software Team Member</h6></div>
+            </a>
+            <a class="note sticky1 three">
+              <div class='text'><h6>Software Development Intern</h6></div>
+            </a>
+            <a class="note sticky2 three">
+              <div class='text'><h6>Treasurer, Co-Founder</h6></div>
+            </a>
+            <a class="note sticky4 three">
+              <div class='text'><h6>Food Commitee Member</h6></div>
+            </a>
+          </div>
+          <div class="col">
+            <a class="note sticky1 four">
+              <div class='text' id="desc">Writing software for the LunaSat in C++ with Arduino!</div>
+            </a><a class="note sticky3 four">
+              <div class='text' id="desc">Developing APIs, user interfaces, and data models</div>
+            </a>
+            <a class="note sticky2 four">
+              <div class='text' id="desc">Applying for funding and budgeting</div>
+            </a>
+            <a class="note sticky4 four">
+              <div class='text' id="desc">Reviewing and organizing applications</div>
+            </a>
+          </div>
+          <div class="col">
+            <a class="note sticky2 one">
+              <div class='text' id="websites"><img src="assets/spacegrant.png" alt="cosgc" onclick="location.href='https://spacegrant.colorado.edu/'" width="150"></div>
+            </a>
+            <a class="note sticky2 two">
+              <div class='text' id="websites"><img src="assets/hitachi.png" alt="hitachienergy" onclick="location.href='https://www.hitachienergy.com/us/en'" width="100"></div>
+            </a>
+            <a class="note sticky3 two">
+              <div class='text' id="websites"><img src="assets/blueprint.png" alt="blueprintboulder" onclick="location.href='https://blueprintboulder.org/'" width="100"></div>
+            </a>
+            <a class="note sticky1 two">
+              <div class='text' id="websites"><img src="assets/ifest.png" alt="cuifest" onclick="location.href='https://www.colorado.edu/event/ifest/'" width="100"></div>
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
     </body>
   </html>
