--- a/contact.html
+++ b/contact.html
@@ -12,21 +12,22 @@
       <nav>
         <a href="index.html">About Me</a>
         <a href="experience.html">Experience</a>
+        <a href="projects.html">Projects</a>
         <a href="resume.html">Resume</a>
         <a href="contact.html" class="active">Contact</a>
       </nav>
     <section id="sticky">
-      <h1>--Feel free to stay connected!--</h1>
+      <h5>Feel free to stay connected!</h5>
     </section>
-    <section id="flexLinks">
-      <a class="flexitem" href="https://www.linkedin.com/in/yvonne-liu-44b038173/">
-        <img src="assets/linkedin.svg" alt="linkedin" width="80" class="social">
+    <section id="social">
+      <a class="link" href="https://www.linkedin.com/in/yvonne-liu-44b038173/">
+        <img src="assets/linkedin.svg" alt="linkedin" width="80">
       </a>
-      <a class="flexitem"  href="https://github.com/vonvonliu">
-        <img src="assets/github.svg" alt="github" width="80" class="social">
+      <a class="link"  href="https://github.com/vonvonliu">
+        <img src="assets/github.svg" alt="github" width="80">
       </a>
-      <a class="flexitem"  href="mailto:yuli4421@colorado.edu">
-        <img src="assets/gmail.svg" alt="email" width="80" class="social">
+      <a class="link"  href="mailto:yuli4421@colorado.edu">
+        <img src="assets/gmail.svg" alt="email" width="80">
       </a>
     </section>
     </body>
