--- a/index.html
+++ b/index.html
@@ -12,11 +12,29 @@
       <nav>
         <a href="index.html" class="active">About Me</a>
         <a href="experience.html">Experience</a>
+        <a href="projects.html">Projects</a>
         <a href="resume.html">Resume</a>
         <a href="contact.html">Contact</a>
       </nav>
-    <section id="content2">
-      <p>HIIIIIIII</p>
-    </section>
+      <section id="header">
+        <h1>Yvonne Liu </h>
+      </section>
+      <section id="border">
+        <section id="aboutme">
+          <div class="row">
+            <div class="column">
+              <img src="assets/mee.JPG" alt="picofme" width="300">
+              <h3>I was originally born in Taiwan but I have lived in the US for over a decade. I spent several year in Ohio (GO BUCKS!) and have been in Colorado for almost eight years, half of of the time in the south Denver area and half in Boulder! I am fluent in Mandarin,
+              English, and French. I am a strength-training enthusiast, and I can either be found at the gym or the kitchen cooking or baking!</h3>
+            </div>
+            <div class="column">
+              <h3>Hello! My name is Yvonne! I currently attend the University of Colorado at Boulder. I am a senior about to get her bachelor's degree in computer science.
+              I also have a minor in Creative Technology and Design. I am a software engineer, software developer, and web developer. My interest mainly lies in back-end
+              development, but I have had experience in both front-end, back-end, and full-stack overall.</h3>
+              <img src="assets/me.png" alt="picofme" width="300">
+            </div>
+          </div>
+        </section>
+      </section>
     </body>
   </html>
