--- a/resume.html
+++ b/resume.html
@@ -7,17 +7,18 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display">
     <link rel="stylesheet" href="style.css">
   </head>
-
-  <body id="index">
-
-      <nav>
-        <a href="index.html">About Me</a>
-        <a href="experience.html">Experience</a>
-        <a href="resume.html" class="active">Resume</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-    <section id="content2">
-      <p>HIIIIIIIIIIIIIIIIIIII</p>
+  <body>
+    <nav>
+      <a href="index.html">About Me</a>
+      <a href="experience.html">Experience</a>
+      <a href="projects.html" >Projects</a>
+      <a href="resume.html" class="active">Resume</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+    <section id="resumeBlock">
+      <div class="paper">
+        <img src="assets/resume1.png" alt="resume page 1" width="800">
+      </div>
     </section>
-    </body>
-  </html>
+  </body>
+</html>
