--- a/experience.html
+++ b/experience.html
@@ -16,9 +16,10 @@
       <a href="contact.html">Contact</a>
     </nav>
     <section id="header">
-      <h1>Experience</h>
+      <h1>Experience</h1>
     </section>
     <section>
+       <img id="bulletin" src="assets/bulletinboard.png" alt="bulletinboard" width="1000" height="900">
       <div class="frame">
         <div class="row">
           <div class="col">
@@ -51,29 +52,29 @@
           </div>
           <div class="col">
             <a class="note sticky1 four">
-              <div class='text' id="desc">Writing software for the LunaSat in C++ with Arduino!</div>
+              <div class='text desc'>Writing software for the LunaSat in C++ with Arduino!</div>
             </a><a class="note sticky3 four">
-              <div class='text' id="desc">Developing APIs, user interfaces, and data models</div>
+              <div class='text desc'>Developing APIs, user interfaces, and data models</div>
             </a>
             <a class="note sticky2 four">
-              <div class='text' id="desc">Applying for funding and budgeting</div>
+              <div class='text desc'>Applying for funding and budgeting</div>
             </a>
             <a class="note sticky4 four">
-              <div class='text' id="desc">Reviewing and organizing applications</div>
+              <div class='text desc'>Reviewing and organizing applications</div>
             </a>
           </div>
           <div class="col">
             <a class="note sticky2 one">
-              <div class='text' id="websites"><img src="assets/spacegrant.png" alt="cosgc" onclick="location.href='https://spacegrant.colorado.edu/'" width="150"></div>
+              <div class='text websites'><img src="assets/spacegrant.png" alt="cosgc" onclick="location.href='https://spacegrant.colorado.edu/'" width="150"></div>
             </a>
             <a class="note sticky2 two">
-              <div class='text' id="websites"><img src="assets/hitachi.png" alt="hitachienergy" onclick="location.href='https://www.hitachienergy.com/us/en'" width="100"></div>
+              <div class='text websites'><img src="assets/hitachi.png" alt="hitachienergy" onclick="location.href='https://www.hitachienergy.com/us/en'" width="100"></div>
             </a>
             <a class="note sticky3 two">
-              <div class='text' id="websites"><img src="assets/blueprint.png" alt="blueprintboulder" onclick="location.href='https://blueprintboulder.org/'" width="100"></div>
+              <div class='text websites'><img src="assets/blueprint.png" alt="blueprintboulder" onclick="location.href='https://blueprintboulder.org/'" width="100"></div>
             </a>
             <a class="note sticky1 two">
-              <div class='text' id="websites"><img src="assets/ifest.png" alt="cuifest" onclick="location.href='https://www.colorado.edu/event/ifest/'" width="100"></div>
+              <div class='text websites'><img src="assets/ifest.png" alt="cuifest" onclick="location.href='https://www.colorado.edu/event/ifest/'" width="100"></div>
             </a>
           </div>
         </div>
