--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display">
     <link rel="stylesheet" href="style.css">
   </head>
-
   <body>
       <nav>
         <a href="index.html" class="active">About Me</a>
@@ -17,7 +16,7 @@
         <a href="contact.html">Contact</a>
       </nav>
       <section id="header">
-        <h1>Yvonne Liu </h>
+        <h1>Yvonne Liu </h1>
       </section>
       <section id="border">
         <section id="aboutme">
