--- a/projects.html
+++ b/projects.html
@@ -17,13 +17,13 @@
     </nav>
     <section id="project">
       <h2 id="proj">Battleship</h2>
-      <img id="img" src="assets/ship.svg" width="130" onclick="location.href='https://github.com/kevinawongw/CSCI4448-5448-Battleship-Team-ApplePair'" role="button">
+      <a id="imglink" href="https://github.com/kevinawongw/CSCI4448-5448-Battleship-Team-ApplePair"><img id="img" src="assets/ship.svg" alt="ship" width="130"></a>
       <h5 id="description">A classic game of battleship played in the console written in O-O Java!</h5>
-      <img class="button1" id="battleship" src="assets/mint.svg" width="50"  role="button">
-      <img class="button1" id="capstone" src="assets/mint.svg" width="50"  role="button">
-      <img class="button1" id="glee" src="assets/mint.svg" width="50"  role="button">
-      <img class="button1" id="web" src="assets/mint.svg" width="50"  role="button">
+      <img class="button1" alt="clipart of mint" id="battleship" src="assets/mint.svg" width="50">
+      <img class="button1" alt="clipart of mint" id="capstone" src="assets/mint.svg" width="50">
+      <img class="button1" alt="clipart of mint" id="glee" src="assets/mint.svg" width="50">
+      <img class="button1" alt="clipart of mint" id="web" src="assets/mint.svg" width="50">
     </section>
     <script type="text/javascript" src="index.js"></script>
   </body>
-  </html>
+</html>
