update resume, re-wording in profile

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <div class="column">
               <img src="assets/mee.JPG" alt="picofme" width="300">
               <h3>I was originally born in Taiwan but I have lived in the US for over a decade. I spent several year in Ohio (GO BUCKS!) and have been in Colorado for almost eight years, half of of the time in the south Denver area and half in Boulder! I am fluent in Mandarin,
-              English, and French. I am a strength-training enthusiast, and I can either be found at the gym or the kitchen cooking or baking!</h3>
+              English, and French. I am a strength-training enthusiast. I can either be found at the gym or the kitchen cooking or baking!</h3>
             </div>
             <div class="column">
-              <h3>Hello! My name is Yvonne! I currently attend the University of Colorado at Boulder. I am a senior about to get her bachelor's degree in computer science.
-              I also have a minor in Creative Technology and Design. I am a software engineer, software developer, and web developer. My interest mainly lies in back-end
-              development, but I have had experience in both front-end, back-end, and full-stack overall.</h3>
+              <h3>Hello! My name is Yvonne! I currently attend the University of Colorado at Boulder. I am a senior on her way to gettint to a Bachelor's Degree in Computer Science.
+              I am also minoring in Creative Technology and Design. I am a software engineer, software developer, and web developer. My interest mainly lies in back-end
+              development, but I have had experience in front-end, back-end, and full-stack overall.</h3>
               <img src="assets/me.png" alt="picofme" width="300">
             </div>
           </div>
