--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
     </nav>
     <section id="resumeBlock">
       <div class="paper">
-        <img src="assets/resume1.png" alt="resume page 1" width="800">
+        <img src="assets/resume.png" alt="resume" width="800">
       </div>
     </section>
   </body>
